--- a/app/src/main/res/layout/modules_content_mfom3.xml
+++ b/app/src/main/res/layout/modules_content_mfom3.xml
@@ -72,7 +72,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_mfom_twoTwo"
         android:layout_marginEnd="5dp"
-        android:text="To Pass:"
+        android:text="For a 3rd/pass:"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Button
