Added Module implementation in MFOM3 and Strategy modules. Cleaned Calculations.java so that it doesnt reference MFOM3 anymore.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -15,6 +15,20 @@
     <item name="mfom3_assignment_3_grade" type="id"/>
     <item name="mfom3_assignment_4_grade" type="id"/>
 
+    <!-- STRATEGY -->
+    <item name="strategy_assignment_1" type="id"/>
+    <item name="strategy_assignment_2" type="id"/>
+    <item name="strategy_assignment_3" type="id"/>
+    <item name="strategy_assignment_4" type="id"/>
+    <item name="strategy_assignment_1_weight" type="id"/>
+    <item name="strategy_assignment_2_weight" type="id"/>
+    <item name="strategy_assignment_3_weight" type="id"/>
+    <item name="strategy_assignment_4_weight" type="id"/>
+    <item name="strategy_assignment_1_grade" type="id"/>
+    <item name="strategy_assignment_2_grade" type="id"/>
+    <item name="strategy_assignment_3_grade" type="id"/>
+    <item name="strategy_assignment_4_grade" type="id"/>
+
 
 
 </resources>
