--- a/app/src/main/res/layout/modules_content_cat.xml
+++ b/app/src/main/res/layout/modules_content_cat.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/manSci_firstYear_cat_relative_layout"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -15,11 +16,21 @@
         android:id="@+id/manSci_firstYear_modules_cat_addAssignment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/manSci_firstYear_modules_cat_gradeNeeded"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="55dp"
         android:onClick="addAssignment"
         android:text="@string/add_assignment" />
+
+    <Button
+        android:id="@+id/manSci_secondYear_button_MFOM_calculateGrades"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/manSci_firstYear_modules_cat_addAssignment"
+        android:layout_toEndOf="@+id/manSci_firstYear_modules_cat_addAssignment"
+        android:onClick="calculateGrades"
+        android:text="@string/calculate_grades_needed" />
 
     <TextView
         android:layout_width="wrap_content"
