--- a/app/src/main/res/layout/modules_content_da2.xml
+++ b/app/src/main/res/layout/modules_content_da2.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/manSci_secondYear_da2_relative_layout"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -17,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/manSci_secondYear_modules_da2_gradeNeeded"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="55dp"
         android:onClick="addAssignment"
