--- a/app/src/main/res/layout/modules_content_minor.xml
+++ b/app/src/main/res/layout/modules_content_minor.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/manSci_secondYear_minor_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -12,68 +13,69 @@
     tools:context="mansci.gradesapp.manSciModules.Minor"
     tools:showIn="@layout/modules_activity_minor">
 
-<Button
-android:id="@+id/manSci_secondYear_modules_minor_addAssignment"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_alignParentBottom="true"
-android:layout_centerHorizontal="true"
-android:layout_marginBottom="55dp"
-android:onClick="addAssignment"
-android:text="@string/add_assignment" />
+    <Button
+        android:id="@+id/manSci_secondYear_modules_minor_addAssignment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/manSci_secondYear_modules_minor_gradeNeeded"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="55dp"
+        android:onClick="addAssignment"
+        android:text="@string/add_assignment" />
 
-<TextView
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:textAppearance="?android:attr/textAppearanceMedium"
-android:text="Exam grade needed"
-android:id="@+id/manSci_secondYear_modules_minor_gradeNeeded"
-    android:layout_centerVertical="true"
-    android:layout_alignParentStart="true" />
+    <TextView
+        android:id="@+id/manSci_secondYear_modules_minor_gradeNeeded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:text="Exam grade needed"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-<TextView
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:textAppearance="?android:attr/textAppearanceMedium"
-android:text="For a 1st: "
-android:id="@+id/manSci_secondYear_modules_minor_First"
-android:layout_below="@+id/manSci_secondYear_modules_minor_gradeNeeded"
-android:layout_alignParentStart="true" />
+    <TextView
+        android:id="@+id/manSci_secondYear_modules_minor_First"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/manSci_secondYear_modules_minor_gradeNeeded"
+        android:text="For a 1st: "
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-<TextView
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:textAppearance="?android:attr/textAppearanceMedium"
-android:text="For a 2.1:"
-android:id="@+id/manSci_secondYear_modules_minor_twoOne"
-android:layout_below="@+id/manSci_secondYear_modules_minor_First"
-android:layout_alignParentStart="true" />
+    <TextView
+        android:id="@+id/manSci_secondYear_modules_minor_twoOne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/manSci_secondYear_modules_minor_First"
+        android:text="For a 2.1:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-<TextView
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:textAppearance="?android:attr/textAppearanceMedium"
-android:text="For a 2.2:"
-android:id="@+id/manSci_secondYear_modules_minor_twoTwo"
-android:layout_below="@+id/manSci_secondYear_modules_minor_twoOne"
-android:layout_alignParentStart="true" />
+    <TextView
+        android:id="@+id/manSci_secondYear_modules_minor_twoTwo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/manSci_secondYear_modules_minor_twoOne"
+        android:text="For a 2.2:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-<TextView
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:textAppearance="?android:attr/textAppearanceMedium"
-android:text="For a 3rd:"
-android:id="@+id/manSci_secondYear_modules_minor_third"
-android:layout_below="@id/manSci_secondYear_modules_minor_twoTwo"
-android:layout_alignParentStart="true" />
+    <TextView
+        android:id="@+id/manSci_secondYear_modules_minor_third"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/manSci_secondYear_modules_minor_twoTwo"
+        android:text="For a 3rd:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-<TextView
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:textAppearance="?android:attr/textAppearanceMedium"
-android:text="To Pass:"
-android:id="@+id/manSci_secondYear_modules_minor_Pass"
-android:layout_below="@+id/manSci_secondYear_modules_minor_third"
-android:layout_alignParentStart="true" />
+    <TextView
+        android:id="@+id/manSci_secondYear_modules_minor_Pass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/manSci_secondYear_modules_minor_third"
+        android:text="To Pass:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    </RelativeLayout>
+</RelativeLayout>
