--- a/app/src/main/res/layout/modules_content_be1.xml
+++ b/app/src/main/res/layout/modules_content_be1.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/manSci_firstYear_be1_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/manSci_firstYear_be1_relative_layout"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -25,7 +25,7 @@
         android:text="@string/add_assignment" />
 
     <Button
-        android:id="@+id/manSci_secondYear_button_MFOM_calculateGrades"
+        android:id="@+id/manSci_firstYear_button_strategy_calculateGrades"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/manSci_firstYear_modules_be1_addAssignment"
@@ -34,58 +34,49 @@
         android:text="@string/calculate_grades_needed" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Exam grade needed"
         android:id="@+id/manSci_firstYear_modules_be1_gradeNeeded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:text="Exam grade needed"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 1st: "
         android:id="@+id/manSci_firstYear_modules_be1_First"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_firstYear_modules_be1_gradeNeeded"
-        android:layout_alignParentStart="true" />
+        android:text="For a 1st: "
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 2.1:"
         android:id="@+id/manSci_firstYear_modules_be1_twoOne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_firstYear_modules_be1_First"
-        android:layout_alignParentStart="true" />
+        android:text="For a 2.1:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 2.2:"
         android:id="@+id/manSci_firstYear_modules_be1_twoTwo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_firstYear_modules_be1_twoOne"
-        android:layout_alignParentStart="true" />
+        android:text="For a 2.2:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
+        android:id="@+id/manSci_firstYear_modules_be1_pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 3rd/pass:"
-        android:id="@+id/manSci_firstYear_modules_be1_Pass"
+        android:layout_alignParentStart="true"
         android:layout_below="@id/manSci_firstYear_modules_be1_twoTwo"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:id="@+id/manSci_secondYear_button_mfom1_calculateGrades"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/manSci_firstYear_modules_be1_addAssignment"
-        android:layout_toEndOf="@+id/manSci_firstYear_modules_be1_addAssignment"
-        android:onClick="calculateGrades"
-        android:text="@string/calculate_grades_needed" />
+        android:text="To pass"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@+id/manSci_firstYear_modules_be1_First_grade"
@@ -120,9 +111,9 @@
         android:id="@+id/manSci_firstYear_modules_be1_pass_grade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/manSci_firstYear_modules_be1_Pass"
+        android:layout_alignBaseline="@id/manSci_firstYear_modules_be1_pass"
         android:layout_alignLeft="@id/manSci_firstYear_modules_be1_First_grade"
-        android:layout_toEndOf="@id/manSci_firstYear_modules_be1_Pass"
+        android:layout_toEndOf="@id/manSci_firstYear_modules_be1_pass"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
