--- a/app/src/main/res/layout/modules_content_cat.xml
+++ b/app/src/main/res/layout/modules_content_cat.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/manSci_firstYear_cat_relative_layout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -12,6 +12,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="mansci.gradesapp.manSciModules.cat"
     tools:showIn="@layout/modules_activity_cat">
+
     <Button
         android:id="@+id/manSci_firstYear_modules_cat_addAssignment"
         android:layout_width="wrap_content"
@@ -24,7 +25,7 @@
         android:text="@string/add_assignment" />
 
     <Button
-        android:id="@+id/manSci_secondYear_button_MFOM_calculateGrades"
+        android:id="@+id/manSci_firstYear_button_strategy_calculateGrades"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/manSci_firstYear_modules_cat_addAssignment"
@@ -33,58 +34,49 @@
         android:text="@string/calculate_grades_needed" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Exam grade needed"
         android:id="@+id/manSci_firstYear_modules_cat_gradeNeeded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:text="Exam grade needed"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 1st: "
         android:id="@+id/manSci_firstYear_modules_cat_First"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_firstYear_modules_cat_gradeNeeded"
-        android:layout_alignParentStart="true" />
+        android:text="For a 1st: "
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 2.1:"
         android:id="@+id/manSci_firstYear_modules_cat_twoOne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_firstYear_modules_cat_First"
-        android:layout_alignParentStart="true" />
+        android:text="For a 2.1:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 2.2:"
         android:id="@+id/manSci_firstYear_modules_cat_twoTwo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_firstYear_modules_cat_twoOne"
-        android:layout_alignParentStart="true" />
+        android:text="For a 2.2:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
+        android:id="@+id/manSci_firstYear_modules_cat_pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 3rd/pass:"
-        android:id="@+id/manSci_firstYear_modules_cat_third"
+        android:layout_alignParentStart="true"
         android:layout_below="@id/manSci_firstYear_modules_cat_twoTwo"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:id="@+id/manSci_firstYear_button_cat_calculateGrades"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/manSci_firstYear_modules_cat_addAssignment"
-        android:layout_toEndOf="@+id/manSci_firstYear_modules_cat_addAssignment"
-        android:onClick="calculateGrades"
-        android:text="@string/calculate_grades_needed" />
+        android:text="To pass"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@+id/manSci_firstYear_modules_cat_First_grade"
@@ -100,7 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/manSci_firstYear_modules_cat_twoOne"
-        android:layout_alignLeft="@id/manSci_firstYear_modules_cat_First"
+        android:layout_alignLeft="@id/manSci_firstYear_modules_cat_First_grade"
         android:layout_toEndOf="@id/manSci_firstYear_modules_cat_twoOne"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -110,7 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/manSci_firstYear_modules_cat_twoTwo"
-        android:layout_alignLeft="@id/manSci_firstYear_modules_cat_First"
+        android:layout_alignLeft="@id/manSci_firstYear_modules_cat_First_grade"
         android:layout_toEndOf="@id/manSci_firstYear_modules_cat_twoTwo"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -119,9 +111,10 @@
         android:id="@+id/manSci_firstYear_modules_cat_pass_grade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/manSci_firstYear_modules_cat_third"
-        android:layout_alignLeft="@id/manSci_firstYear_modules_cat_First"
-        android:layout_toEndOf="@id/manSci_firstYear_modules_cat_third"
+        android:layout_alignBaseline="@id/manSci_firstYear_modules_cat_pass"
+        android:layout_alignLeft="@id/manSci_firstYear_modules_cat_First_grade"
+        android:layout_toEndOf="@id/manSci_firstYear_modules_cat_pass"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceSmall" />
+
 </RelativeLayout>
