--- a/app/src/main/res/layout/modules_content_design.xml
+++ b/app/src/main/res/layout/modules_content_design.xml
@@ -2,15 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/manSci_secondYear_design_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/manSci_secondYear_design_relative_layout"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="mansci.gradesapp.manSciModules.Design"
+    tools:context="mansci.gradesapp.manSciModules.design"
     tools:showIn="@layout/modules_activity_design">
 
     <Button
@@ -24,57 +24,97 @@
         android:onClick="addAssignment"
         android:text="@string/add_assignment" />
 
-    <TextView
+    <Button
+        android:id="@+id/manSci_secondYear_button_strategy_calculateGrades"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Exam grade needed"
+        android:layout_alignTop="@+id/manSci_secondYear_modules_design_addAssignment"
+        android:layout_toEndOf="@+id/manSci_secondYear_modules_design_addAssignment"
+        android:onClick="calculateGrades"
+        android:text="@string/calculate_grades_needed" />
+
+    <TextView
         android:id="@+id/manSci_secondYear_modules_design_gradeNeeded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:text="Exam grade needed"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 1st: "
         android:id="@+id/manSci_secondYear_modules_design_First"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_design_gradeNeeded"
-        android:layout_alignParentStart="true" />
+        android:text="For a 1st: "
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 2.1:"
         android:id="@+id/manSci_secondYear_modules_design_twoOne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_design_First"
-        android:layout_alignParentStart="true" />
+        android:text="For a 2.1:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 2.2:"
         android:id="@+id/manSci_secondYear_modules_design_twoTwo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_design_twoOne"
-        android:layout_alignParentStart="true" />
+        android:text="For a 2.2:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
+        android:id="@+id/manSci_secondYear_modules_design_pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="For a 3rd:"
-        android:id="@+id/manSci_secondYear_modules_design_third"
+        android:layout_alignParentStart="true"
         android:layout_below="@id/manSci_secondYear_modules_design_twoTwo"
-        android:layout_alignParentStart="true" />
+        android:text="To pass"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
+        android:id="@+id/manSci_secondYear_modules_design_First_grade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="To Pass:"
-        android:id="@+id/manSci_secondYear_modules_design_Pass"
-        android:layout_below="@+id/manSci_secondYear_modules_design_third"
-        android:layout_alignParentStart="true" />
+        android:layout_alignBaseline="@id/manSci_secondYear_modules_design_First"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_design_First"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/manSci_secondYear_modules_design_twoOne_grade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/manSci_secondYear_modules_design_twoOne"
+        android:layout_alignLeft="@id/manSci_secondYear_modules_design_First_grade"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_design_twoOne"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/manSci_secondYear_modules_design_twoTwo_grade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/manSci_secondYear_modules_design_twoTwo"
+        android:layout_alignLeft="@id/manSci_secondYear_modules_design_First_grade"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_design_twoTwo"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/manSci_secondYear_modules_design_pass_grade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/manSci_secondYear_modules_design_pass"
+        android:layout_alignLeft="@id/manSci_secondYear_modules_design_First_grade"
+        android:layout_toEndOf="@id/manSci_secondYear_modules_design_pass"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
 </RelativeLayout>
