--- a/app/src/main/res/layout/modules_content_mfom2.xml
+++ b/app/src/main/res/layout/modules_content_mfom2.xml
@@ -2,15 +2,119 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/manSci_firstYear_mfom2_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/manSci_firstYear_mfom2_relative_layout"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="mansci.gradesapp.manSciModules.MFOM2"
+    tools:context="mansci.gradesapp.manSciModules.mfom2"
     tools:showIn="@layout/modules_activity_mfom2">
+
+    <Button
+        android:id="@+id/manSci_firstYear_modules_mfom2_addAssignment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/manSci_firstYear_modules_mfom2_gradeNeeded"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="55dp"
+        android:onClick="addAssignment"
+        android:text="@string/add_assignment" />
+
+    <Button
+        android:id="@+id/manSci_firstYear_button_strategy_calculateGrades"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/manSci_firstYear_modules_mfom2_addAssignment"
+        android:layout_toEndOf="@+id/manSci_firstYear_modules_mfom2_addAssignment"
+        android:onClick="calculateGrades"
+        android:text="@string/calculate_grades_needed" />
+
+    <TextView
+        android:id="@+id/manSci_firstYear_modules_mfom2_gradeNeeded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:text="Exam grade needed"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/manSci_firstYear_modules_mfom2_First"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/manSci_firstYear_modules_mfom2_gradeNeeded"
+        android:text="For a 1st: "
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/manSci_firstYear_modules_mfom2_twoOne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/manSci_firstYear_modules_mfom2_First"
+        android:text="For a 2.1:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/manSci_firstYear_modules_mfom2_twoTwo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/manSci_firstYear_modules_mfom2_twoOne"
+        android:text="For a 2.2:"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/manSci_firstYear_modules_mfom2_pass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/manSci_firstYear_modules_mfom2_twoTwo"
+        android:text="To pass"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/manSci_firstYear_modules_mfom2_First_grade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/manSci_firstYear_modules_mfom2_First"
+        android:layout_toEndOf="@id/manSci_firstYear_modules_mfom2_First"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/manSci_firstYear_modules_mfom2_twoOne_grade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/manSci_firstYear_modules_mfom2_twoOne"
+        android:layout_alignLeft="@id/manSci_firstYear_modules_mfom2_First_grade"
+        android:layout_toEndOf="@id/manSci_firstYear_modules_mfom2_twoOne"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/manSci_firstYear_modules_mfom2_twoTwo_grade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/manSci_firstYear_modules_mfom2_twoTwo"
+        android:layout_alignLeft="@id/manSci_firstYear_modules_mfom2_First_grade"
+        android:layout_toEndOf="@id/manSci_firstYear_modules_mfom2_twoTwo"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/manSci_firstYear_modules_mfom2_pass_grade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/manSci_firstYear_modules_mfom2_pass"
+        android:layout_alignLeft="@id/manSci_firstYear_modules_mfom2_First_grade"
+        android:layout_toEndOf="@id/manSci_firstYear_modules_mfom2_pass"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </RelativeLayout>
