Added Module Implementation to all remaining modules. Changed grade literal strings to string resources.

--- a/app/src/main/res/layout/modules_content_da1.xml
+++ b/app/src/main/res/layout/modules_content_da1.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:text="Exam grade needed"
+        android:text="@string/exam_grade_needed"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_firstYear_modules_da1_gradeNeeded"
-        android:text="For a 1st: "
+        android:text="@string/for_a_first"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_firstYear_modules_da1_First"
-        android:text="For a 2.1:"
+        android:text="@string/for_a_twoOne"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_firstYear_modules_da1_twoOne"
-        android:text="For a 2.2:"
+        android:text="@string/for_a_twoTwo"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -75,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@id/manSci_firstYear_modules_da1_twoTwo"
-        android:text="To pass"
+        android:text="@string/for_a_third"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
