--- a/app/src/main/res/layout/modules_content_mfom3.xml
+++ b/app/src/main/res/layout/modules_content_mfom3.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:text="Exam grade needed"
+        android:text="@string/exam_grade_needed"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -41,7 +41,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_mfom_gradeNeeded"
         android:layout_marginEnd="5dp"
-        android:text="For a 1st:"
+        android:text="@string/for_a_first"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -51,7 +51,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_mfom_First"
         android:layout_marginEnd="5dp"
-        android:text="For a 2.1:"
+        android:text="@string/for_a_twoOne"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
@@ -61,7 +61,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_mfom_twoOne"
         android:layout_marginEnd="5dp"
-        android:text="For a 2.2:"
+        android:text="@string/for_a_twoTwo"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 
@@ -72,7 +72,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/manSci_secondYear_modules_mfom_twoTwo"
         android:layout_marginEnd="5dp"
-        android:text="For a 3rd/pass:"
+        android:text="@string/for_a_third"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Button
